--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
 
-    <div class="container">
+    <div class="container mt-3 mb-3">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                 <div class="row g-3">
@@ -23,7 +23,7 @@
                         <div class="card">
                             <img src="https://m.media-amazon.com/images/I/712K3sdLlRL._SL1500_.jpg" height="450px" style="object-fit: cover;" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Dopemine Detox</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card’s content.</p>
                                 <a href="#" class="btn btn-secondary">-20% ₹195</a>
@@ -36,9 +36,8 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://m.media-amazon.com/images/I/715qi-cIbML._SL1500_.jpg" height="450px" style="object-fit: cover;" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card’s content.</p>
+                                <h5 class="card-title">Don't Believe Everything You Think</h5>
+                                <p class="card-text">Some quick example text to build on the card title </p>
                                 <a href="#" class="btn btn-secondary">-34% ₹196</a>
                                 <a href="#" class="btn btn-secondary"> Joseph Nguyen</a>
 
@@ -49,7 +48,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://m.media-amazon.com/images/I/71XEsXS5RlL._SL1500_.jpg" height="450px" style="object-fit: cover;" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">The Psychology of Money</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card’s content.</p>
                                 <a href="#" class="btn btn-secondary">-28% ₹289</a>
@@ -62,9 +61,8 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://m.media-amazon.com/images/I/61Ktyy7KymL._SL1500_.jpg" height="450px" style="object-fit: cover;" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card’s content.</p>
+                                <h5 class="card-title">The Art of Being Alone: Loneliness </h5>
+                                <p class="card-text">Some quick example text to build on the card title.</p>
                                 <a href="#" class="btn btn-secondary">-38% ₹184</a>
                                 <a href="#" class="btn btn-secondary"> Renuka Gavrani </a>
 
@@ -75,7 +73,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://m.media-amazon.com/images/I/61WMgOHyDaL._SL1500_.jpg" height="450px" style="object-fit: cover;" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">The Power of Your Subconscious Mind:</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card’s content.</p>
                                 <a href="#" class="btn btn-secondary">-25% ₹149</a>
@@ -88,9 +86,8 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://m.media-amazon.com/images/I/61xivWmExiL._SL1500_.jpg" height="450px" style="object-fit: cover;" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card’s content.</p>
+                                <h5 class="card-title">The Mountain Is You: Transforming Self-Sabotage Into Self-Mastery </h5>
+                                <p class="card-text">Some quick example text to build on the card title.</p>
                                 <a href="#" class="btn btn-secondary">-35% ₹259</a>
                                 <a href="#" class="btn btn-secondary"> Brianna Wiest </a>
 
@@ -101,7 +98,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://m.media-amazon.com/images/I/71-jZgbnPrL._SL1500_.jpg" height="450px" style="object-fit: cover;" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Read People Like a Book</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card’s content.</p>
                                 <a href="#" class="btn btn-secondary">-27% ₹289</a>
@@ -114,7 +111,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://m.media-amazon.com/images/I/617lxveUjYL._SL1500_.jpg" height="450px" style="object-fit: cover;" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">The Alchemist</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card’s content.</p>
                                 <a href="#" class="btn btn-secondary">-45% ₹219</a>
@@ -127,7 +124,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://m.media-amazon.com/images/I/71t4GuxLCuL._SL1500_.jpg" height="450px" style="object-fit: cover;" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">The Subtle Art of Not Giving a F*ck </h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card’s content.</p>
                                 <a href="#" class="btn btn-secondary">₹348</a>
@@ -140,7 +137,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://m.media-amazon.com/images/I/618XGVFYlwL._SL1360_.jpg" height="450px" style="object-fit: cover;"    class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">How to Win Friends and Influence People</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk of the card’s content.</p>
                                 <a href="#" class="btn btn-secondary">-50% ₹125</a>
